# MIPT_OS_COURSE

./: CMakeLists.txt  README.md
Matrix/: Matrix  main.c
Robot/: RobotTwoLegs  consoleUtils.c  multiRobot.c  robot_two_legs.c
TriangleAndPoint/: main.c  triangle
TriangleAndPoint/UnitTriangle/src/: triangle.c  triangle.h
TriangleAndPoint/UnitTriangle/test/: test_tr.c
backdoor/: client_backdoor.c  netUtils.c  server_backdoor.c
bakeryAlgorithm/: bakeryAlg.c
chatRoom/: client.c  netUtils.h  server.c
diningPhilosophers/: philosophers.c  philosophersForks.c
environmentVars/: env_0.c  env_1.c  env_user_name
logger/: log.txt  logger  main.c  urls
myvc/: main.c  mywc  sad
signals/: signal.c
supervisor/: consoleUtils.h  first_task.c  secondTask.cpp  second_task.c
